[project]
name = "msc-thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "halo>=0.0.31",
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psutil>=7.0.0",
    "rich>=14.1.0",
    "setuptools>=80.9.0",
    "sympy>=1.14.0",
    "z3-solver==4.13.0",
]

[tool.mypy]
    python_version = "3.13"
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = false  # Set true for strict mode
    ignore_missing_imports = true

    # Paths to check
    files = ["dynamic_solvers"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "debugpy>=1.8.17",
]
